Refactored to add a Ref class so that initalized values can be passed by reference similar to C# ref's keyword.